--- a/Assignment 1/About.html
+++ b/Assignment 1/About.html
@@ -15,8 +15,8 @@
         font-family: Arial;
       "
     >
-      Whenever we hear food, we got hungry, so don't hear just Beer!!! Just
-      kidding :)
+      Whenever we hear food, we got hungry, so
+      <q>don't hear just Beer!!!</q> Just kidding :)
     </div>
     <div>
       <a href="header.html">
